<resources>
    <string name="app_name">Cab Point</string>
    <integer name="google_play_services_version">11020000</integer>
    <string name="google_API_KEY">AIzaSyC4AbbaSv65_q3rVuqWEYOoExeyeLeGaZc</string>
    <!--AIzaSyC4AbbaSv65_q3rVuqWEYOoExeyeLeGaZc-->
    <!--AIzaSyD3FuZWVdzY0x3rbPHReUIFgRzs2gdzMbg-->
    <string name="verify_instructions">We have called you on the number given. Please check your call log.\n\nTo complete your phone number verification please enter last 5 digits of the number.</string>
    <string name="book">Book</string>

    <string name="add_home">Add Home</string>
    <string name="add_work">Add Work</string>
    <string name="cancel">Cancel</string>
    <string name="mobile">MOBILE</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="destination">Destination</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="passenger">Passengers</string>
    <string name="payment">Payment</string>
    <string name="full_name">Full Name</string>
    <string name="title_activity_map">Map</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm</string>
    <string name="ride_now">Ride Now</string>
    <string name="destination_location">Destination Location</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="requesting_text">We are looking for the best near by car for you</string>
    <string name="empty_space">-</string>
    <string name="back">Back</string>
    <string name="your_location">Your Location</string>
    <string name="request_ride">REQUEST RIDE</string>
    <string name="contact_us">CONTACT US</string>
    <string name="txt_contact">\tClick one of the options below\nand we will get in touch with you\nshortly.</string>
    <string name="change_phone_note">Your account is based on your mobile number, so\nyou would have to verify your mobile number.</string>
    <string name="txt_update">UPDATE</string>
    <string name="recover_note">To recover your password please provide the\nemail address you specified during registration.</string>
    <string name="hint_email">Enter Your Email</string>
    <string name="txt_recover">RECOVER</string>
    <string name="no_connectivity">No Connectivity</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="history">History</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="no_internet">No Internet</string>
    <string name="send_invitation">SEND INVITATION</string>
    <string name="setting">Settings</string>
    <string name="setting_string">Your profile helps you control your default preference.</string>
    <string name="term_condition"><![CDATA[Term & Conditions]]></string>
    <string name="txt_change_name">Your changed name will be shown to others.\nMake sure to add your correct name.</string>
    <string name="fname">FIRST NAME</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="lname">LAST NAME</string>
    <string name="txt_home">ADD HOME</string>
    <string name="txt_work">ADD WORK</string>
    <string name="hint_home">Add Home</string>
    <string name="txt_done">DONE</string>
    <string name="txt_custom_places">Save your home and word address to access\nthem instantly</string>
    <string name="home_work"><![CDATA[HOME & WORK]]></string>
    <string name="promo_code">Promo Code</string>
    <string name="promo_text">Add your Promo Code to achieve latest offers. Each promo code has its expiry date after that it would not work.</string>
    <string name="promotions_text">Get Promotion Code to achieve latest offers. Each promo code has its expiry date after that it would not work.</string>
    <string name="expiry_string">Expiry:</string>
    <string name="add_promo_code">Add Promo Code</string>
    <string name="promotions">Promotions</string>
    <string name="payment_note">Note : Long click on any method  \n  to select as default</string>
    <string name="balance">Balance :</string>
    <string name="register">REGISTER</string>
    <string name="time_range_msg">Date/Time should be in present or future</string>
    <string name="app_slogan">YOUR PERSONAL RIDE</string>
    <string name="post_code">Post Code</string>
</resources>
