<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorNew"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/rel_txt_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cab_text"
        android:gravity="center">

        <TextView
            android:id="@+id/back_text"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:gravity="center"
            android:text="CHANGE PASSWORD"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp" />
    </LinearLayout>

    <EditText
        android:id="@+id/old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:padding="@dimen/_12sdp"
        android:textAlignment="center"
        android:textSize="@dimen/_14ssp" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="@dimen/_12sdp"
        android:textAlignment="center"
        android:textSize="@dimen/_14ssp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="@dimen/_12sdp"
        android:textAlignment="center"
        android:textSize="@dimen/_14ssp" />

    <Button
        android:id="@+id/change_password"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:background="@color/cab_text"
        android:padding="@dimen/_10sdp"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>