<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rel_navbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/cab_text">

        <com.apps.cabpoint.cabigate.views.MobiTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="Change Name"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

        <ImageView
            android:background="@drawable/ripple_effect"
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_arrow_back_black_24dp" />

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_14sdp"
            android:paddingLeft="@dimen/_14sdp"
            android:paddingTop="@dimen/_14sdp">

            <com.apps.cabpoint.cabigate.views.MobiTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:text="NOTE:"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <com.apps.cabpoint.cabigate.views.MobiTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:text="@string/txt_change_name"
                android:textSize="@dimen/_10ssp" />

            <com.apps.cabpoint.cabigate.views.MobiTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/fname"
                android:textColor="@color/cab_text"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/fname_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="textPersonName"
                android:padding="@dimen/_10sdp"
                android:text="@string/hint_fname"
                android:textColor="#66000000"
                android:textSize="@dimen/_14ssp" />

            <com.apps.cabpoint.cabigate.views.MobiTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/lname"
                android:textColor="@color/cab_text"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/lname_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="textPersonName"
                android:padding="@dimen/_10sdp"
                android:text="@string/hint_lname"
                android:textColor="#66000000"
                android:textSize="@dimen/_14ssp" />

            <com.apps.cabpoint.cabigate.views.MobiButton
                android:id="@+id/update_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:background="@color/cab_text"
                android:text="Update"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>