<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rel_navbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/cab_text">

        <com.apps.cabpoint.cabigate.views.MobiTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="Add Custom Places"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:background="@drawable/ripple_effect"
            android:src="@drawable/ic_arrow_back_black_24dp" />

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/_14sdp">

            <com.apps.cabpoint.cabigate.views.MobiTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:text="PLACES:"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <com.apps.cabpoint.cabigate.views.MobiTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:text="@string/txt_custom_places"
                android:textSize="@dimen/_10ssp" />

            <com.apps.cabpoint.cabigate.views.MobiTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/txt_home"
                android:textColor="@color/cab_text"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.apps.cabpoint.cabigate.views.MobiTextView
                    android:id="@+id/home_custom_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:background="@null"
                    android:ellipsize="end"
                    android:inputType="textPostalAddress"
                    android:maxLines="2"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/hint_home"
                    android:textColor="#66000000"
                    android:textSize="@dimen/_12ssp" />

                <ImageView
                    android:visibility="gone"
                    android:id="@+id/home_remove_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:padding="@dimen/_1sdp"
                    android:src="@drawable/ic_cross_icon" />
            </LinearLayout>

            <com.apps.cabpoint.cabigate.views.MobiTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/txt_work"
                android:textColor="@color/cab_text"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.apps.cabpoint.cabigate.views.MobiTextView
                    android:id="@+id/work_custom_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ellipsize="end"
                    android:inputType="textPostalAddress"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/add_work"
                    android:textColor="#66000000"
                    android:layout_weight="0.9"
                    android:textSize="@dimen/_12ssp" />

                <ImageView
                    android:visibility="gone"
                    android:id="@+id/work_remove_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:padding="@dimen/_1sdp"
                    android:src="@drawable/ic_cross_icon" />
            </LinearLayout>

            <com.apps.cabpoint.cabigate.views.MobiButton
                android:id="@+id/update_custom_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@color/cab_text"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:text="@string/txt_done"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>