<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cab_text"
        android:orientation="horizontal"
        android:padding="@dimen/_12sdp">

        <ImageView
            android:background="@drawable/ripple_effect"
            android:id="@+id/back_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <com.apps.cabpoint.cabigate.views.MobiTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="PAYMENT"
            android:textColor="#ffffff"
            android:textSize="@dimen/_15ssp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_10sdp">
        <com.apps.cabpoint.cabigate.views.MobiTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_18ssp"
            android:text="@string/add_payment_method"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"/>
        <com.apps.cabpoint.cabigate.views.MobiButton
            android:id="@+id/add_payment_btn"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:text="add"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"/>
        <com.apps.cabpoint.cabigate.views.MobiTextView
            android:id="@+id/add_promo_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_promo_code"
            android:textSize="@dimen/_18ssp"
            android:gravity="center_vertical"
            android:textColor="@color/cab_text_dark"
            android:drawableLeft="@drawable/ic_promotion"
            android:drawablePadding="@dimen/_5sdp"
            android:layout_margin="@dimen/_15sdp"
            />
        <com.apps.cabpoint.cabigate.views.MobiTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_note"
            android:textSize="@dimen/_12sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="@dimen/_5sdp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">
        <com.apps.cabpoint.cabigate.views.MobiTextView
            android:id="@+id/payment_method_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:text="@string/payment_methods"
            android:textStyle="bold"
            android:textSize="@dimen/_14ssp"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/payment_method_recycler"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>