<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rel_navbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/cab_text">

        <com.apps.cabpoint.cabigate.views.MobiTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="Forgot Password"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

        <ImageView
            android:background="@drawable/ripple_effect"
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_arrow_back_black_24dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/_14sdp">

        <com.apps.cabpoint.cabigate.views.MobiTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="RECOVER PASSWORD"
            android:textColor="@color/fontColor"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <com.apps.cabpoint.cabigate.views.MobiTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/recover_note"
            android:textSize="@dimen/_10ssp" />

        <EditText
            android:id="@+id/email_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@null"
            android:ems="15"
            android:gravity="center"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            android:textColor="#66000000"
            android:textColorHint="@color/fontColor"
            android:textSize="@dimen/_14ssp" />

        <Button
            android:id="@+id/recover_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@color/cab_text"
            android:padding="@dimen/_10sdp"
            android:text="@string/txt_recover"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />
    </LinearLayout>
</LinearLayout>