<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/change_color"
                android:orientation="horizontal"
                android:padding="@dimen/_12sdp">

                <ImageView
                    android:background="@drawable/ripple_effect"
                    android:id="@+id/back_btn_promotion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_arrow_back_black_24dp" />

                <com.apps.cabpoint.cabigate.views.MobiTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:text="@string/promo_code"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/_15ssp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/light_blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/change_color"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:src="@drawable/ic_promo_icon" />

                <com.apps.cabpoint.cabigate.views.MobiTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/_20sdp"
                    android:text="@string/promo_text"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:elevation="@dimen/_3sdp">

            <com.apps.cabpoint.cabigate.views.MobiTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:paddingBottom="@dimen/_3sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:text="New"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />
        </android.support.v7.widget.CardView>

        <com.apps.cabpoint.cabigate.views.MobiTextView
            android:id="@+id/add_promo_code_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:paddingLeft="@dimen/_12sdp"
            android:paddingTop="@dimen/_5sdp"
            android:text="@string/add_promo_code"
            android:textColor="@color/new_font"
            android:textSize="@dimen/_14ssp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_3sdp">

            <com.apps.cabpoint.cabigate.views.MobiTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:paddingBottom="@dimen/_3sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:text="Your Promo Code List"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/promotions_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_3sdp"
        android:paddingTop="@dimen/_2sdp" />

    <RelativeLayout
        android:id="@+id/no_history_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <include layout="@layout/cab_no_history" />
    </RelativeLayout>
</LinearLayout>